--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Padosoft\\Composer\\Tests": "tests"
+            "Padosoft\\Composer\\Test": "tests"
         }
     }
 }
