--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ before_install:
   - cd ./laravel
   - composer config repositories.alevento git https://github.com/alevento/laravel-composer-security
   - composer require padosoft/laravel-composer-security dev-master
+  - composer update
   - php artisan vendor:publish
 
 script:
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - phpunit --configuration ./vendor/padosoft/laravel-composer-security/phpunit.xml --testsuit Package
 
 
