--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ before_install:
 
 script:
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-  - phpunit --configuration ./vendor/padosoft/laravel-composer-security/phpunit.xml --testsuit Package
+  - phpunit --configuration ./vendor/padosoft/laravel-composer-security/phpunit.xml --testsuite Package
 
 
