--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,7 @@
         <testsuite name="Package">
             <directory suffix=".php">./tests</directory>
             <exclude><file>./tests/MailHelperTest.php</file></exclude>
+            <exclude><file>./tests/TestBase.php</file></exclude>
         </testsuite>
     </testsuites>
     <testsuite name="Mail">
