--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: php
 
 php:
 
-  - 5.6
+    - 5.4
+    - 5.5
+    - 5.6
+    - 7.0
+    - hhvm
 
 before_install:
   - composer self-update
@@ -24,3 +28,5 @@ script:
   - vendor/bin/phpunit --configuration ./vendor/padosoft/composer/phpunit.xml.dist --testsuite Package --coverage-text --coverage-clover=coverage.clover
 
 
+after_script:
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
