--- a/tests/.env.dist
+++ b/tests/.env.dist
@@ -20,3 +20,4 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=helpdesk@padosoft.com
 MAIL_FROM_NAME=Helpdesk Padosoft
+MAIL_PORT_WEB=1080
