--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ php:
     - 5.5
     - 5.6
     - 7.0
-    - hhvm
 
 before_install:
   - composer self-update
@@ -28,4 +27,4 @@ script:
 
 
 after_script:
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
+  - if [[ $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
