--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - cd ./laravel
   - composer config repositories.alevento git https://github.com/alevento/composer
   - composer require padosoft/composer dev-master
+  - composer require scrutinizer/ocular ~1.1
   - ./vendor/padosoft/composer/tests/sedCommand.sh
   - composer update
   - rm ./config/app.php
