--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -20,6 +20,7 @@ checks:
         duplication: true
 
 tools:
-    external_code_coverage:
+    sensiolabs_security_checker: true
+    external_code_coverage: true
         timeout: 600
         runs: 3
