--- a/tests/config/.env.dist
+++ b/tests/config/.env.dist
@@ -19,5 +19,5 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=helpdesk@padosoft.com
-MAIL_FROM_NAME=Helpdesk Padosoft
+MAIL_FROM_NAME="Helpdesk Padosoft"
 MAIL_PORT_WEB=1080
