--- a/.travis.yml
+++ b/.travis.yml
@@ -34,20 +34,20 @@ before_install:
   - composer self-update
   - composer create-project laravel/laravel:$LARAVEL_VERSION
   - cd ./laravel
-  - composer config repositories.alevento git https://github.com/alevento/composer
-  - composer require padosoft/composer dev-master
+  - composer config repositories.padosoft git https://github.com/padosoft/laravel-composer-security
+  - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
-  - ./vendor/padosoft/composer/tests/config/sedCommand.sh
+  - ./vendor/padosoft/laravelcomposersecurity/tests/config/sedCommand.sh
   - composer update
-  - ./vendor/padosoft/composer/tests/config/sedCommandProvider.sh
+  - ./vendor/padosoft/laravelcomposersecurity/tests/config/sedCommandProvider.sh
   - rm ./.env
-  - cp ./vendor/padosoft/composer/tests/config/.env.dist ./.env
+  - cp ./vendor/padosoft/laravelcomposersecurity/tests/config/.env.dist ./.env
   - php artisan vendor:publish
   - gem install mailcatcher
   - mailcatcher
 
 script:
-  - vendor/bin/phpunit --configuration ./vendor/padosoft/composer/phpunit.xml.dist --testsuite Package --coverage-text --coverage-clover=coverage.clover
+  - vendor/bin/phpunit --configuration ./vendor/padosoft/laravelcomposersecurity/phpunit.xml.dist --testsuite Package --coverage-text --coverage-clover=coverage.clover
 
 
 after_script:
