--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_install:
   - composer config repositories.padosoft git https://github.com/padosoft/laravel-composer-security
   - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
-  - chmod 777 ./composer.json
+  - chmod 777 -R ./
   - ./vendor/padosoft/laravel-composer-security/tests/config/sedCommand.sh
   - composer update
   - ./vendor/padosoft/laravel-composer-security/tests/config/sedCommandProvider.sh
