--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
 		"illuminate/console": "~5.0"
     },
     "require-dev": {
-        "padosoft/test": "0.1.*"   ,
-        "padosoft/laravel-test": "0.1.*"
+        "padosoft/laravel-test": "0.1.1"
     },
     "autoload": {
         "psr-4": {
