--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "padosoft/laravel-test": "0.1.1"
+        "padosoft/test": "0.1.0"
     },
     "autoload": {
         "psr-4": {
