--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"illuminate/console": "~5.0"
     },
     "require-dev": {
-        "padosoft/laravel-test": "0.1.1"
+        "padosoft/laravel-test": "0.1.1",
         "padosoft/test": "0.1.0"
     },
     "autoload": {
