--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,8 @@ before_install:
   - composer self-update
   - composer create-project laravel/laravel:$LARAVEL_VERSION
   - cd ./laravel
-  - composer config repositories.padosoft git https://github.com/padosoft/laravel-composer-security
+  - composer require padosoft/test 0.1.0
+  - composer require padosoft/laravel-test 0.1.1
   - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
