--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ matrix:
 
 before_install:
   - sudo apt-get install python-software-properties
+  - sudo apt-add-repository -y ppa:brightbox/ruby-ng
   - sudo apt-get update
   - sudo apt-get install ruby2.1 ruby-switch
   - sudo ruby-switch --set ruby2.1
