FIX install mailcatcher travisCI bug.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ matrix:
   - php: 7
     env: LARAVEL_VERSION=5.0
 
+before_deploy:
+  - rvm 1.9.3 do gem install mime-types -v 2.6.2
+
 before_install:
 
   - composer self-update
