--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "padosoft/laravel-test": "^1.0",
-        "padosoft/test": "^0.1"
+        "padosoft/test": "~0.1"
     },
     "autoload": {
         "psr-4": {
