--- a/.travis.yml
+++ b/.travis.yml
@@ -12,24 +12,24 @@ matrix:
   - php: 5.6
     env: LARAVEL_VERSION=5.1
   - php: 5.6
-    env: LARAVEL_VERSION=5.2.45
+    env: LARAVEL_VERSION=5.2
   - php: 5.6
-    env: LARAVEL_VERSION=5.3.9
+    env: LARAVEL_VERSION=5.3
   - php: 7
     env: LARAVEL_VERSION=5.0
   - php: 7
     env: LARAVEL_VERSION=5.1
   - php: 7
-    env: LARAVEL_VERSION=5.2.45
+    env: LARAVEL_VERSION=5.2
   - php: 7
-    env: LARAVEL_VERSION=5.3.9
+    env: LARAVEL_VERSION=5.3
   - php: 7.1
     env: LARAVEL_VERSION=5.1
   - php: 7.1
-    env: LARAVEL_VERSION=5.2.45
+    env: LARAVEL_VERSION=5.2
   - php: 7.1
-    env: LARAVEL_VERSION=5.3.9
-
+    env: LARAVEL_VERSION=5.3
+    
   allow_failures:
   - php: 5.4
     env: LARAVEL_VERSION=5.0
@@ -46,9 +46,10 @@ before_install:
 
   - composer self-update
   - composer create-project laravel/laravel:$LARAVEL_VERSION
+  - composer update
   - cd ./laravel
-  - composer require padosoft/test 0.*
-  - composer require padosoft/laravel-test 1.*
+  - composer require padosoft/laravel-test ^1.*
+  - composer require padosoft/test ~0.1
   - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
