--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
   - php: 5.6
     env: LARAVEL_VERSION=5.1
   - php: 5.6
-    env: LARAVEL_VERSION=5.2
+    env: LARAVEL_VERSION=5.2.23
   - php: 5.6
     env: LARAVEL_VERSION=5.3
   - php: 7
@@ -20,13 +20,13 @@ matrix:
   - php: 7
     env: LARAVEL_VERSION=5.1
   - php: 7
-    env: LARAVEL_VERSION=5.2
+    env: LARAVEL_VERSION=5.2.23
   - php: 7
     env: LARAVEL_VERSION=5.3
   - php: 7.1
     env: LARAVEL_VERSION=5.1
   - php: 7.1
-    env: LARAVEL_VERSION=5.2
+    env: LARAVEL_VERSION=5.2.23
   - php: 7.1
     env: LARAVEL_VERSION=5.3
 
@@ -48,8 +48,8 @@ before_install:
   - composer create-project laravel/laravel:$LARAVEL_VERSION
   - composer update
   - cd ./laravel
-  - composer require padosoft/laravel-test 1.*
-  - composer require padosoft/test 0.1.*
+  - composer require padosoft/laravel-test 1.0
+  - composer require padosoft/test 0.1
   - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
