--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ before_install:
   - composer create-project laravel/laravel:$LARAVEL_VERSION
   - composer update
   - cd ./laravel
-  - composer require padosoft/laravel-test 1.0
-  - composer require padosoft/test 0.1
+  - composer require padosoft/laravel-test:1.1.*
+  - composer require padosoft/test:0.1.*
   - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
