fix travis version for L5.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,8 @@ matrix:
 before_install:
 
   - composer self-update
-  - composer create-project laravel/laravel:$LARAVEL_VERSION
+  - if [[ $LARAVEL_VERSION != '5.3' ]]; then composer create-project laravel/laravel:$LARAVEL_VERSION; fi
+  - if [[ $LARAVEL_VERSION == '5.3' ]]; then composer create-project laravel/laravel:$LARAVEL_VERSION --stability:dev; fi
   - composer update
   - cd ./laravel
   - composer require padosoft/laravel-test:1.1.*
