--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ matrix:
     env: LARAVEL_VERSION=5.1
   - php: 5.6
     env: LARAVEL_VERSION=5.2.23
-  - php: 5.6
-    env: LARAVEL_VERSION=5.3
   - php: 7
     env: LARAVEL_VERSION=5.0
   - php: 7
@@ -49,8 +47,9 @@ before_install:
   - if [[ $LARAVEL_VERSION == '5.3' ]]; then composer create-project laravel/laravel:$LARAVEL_VERSION --stability dev; fi
   - composer update
   - cd ./laravel
-  - composer require padosoft/laravel-test:1.*
-  - composer require padosoft/test:0.1.*
+  - if [[ $LARAVEL_VERSION != '5.3' ]]; then composer require padosoft/laravel-test:1.*; fi
+  - if [[ $LARAVEL_VERSION == '5.3' && $TRAVIS_PHP_VERSION == 7.0 ]]; then composer require padosoft/laravel-test:2.*; fi
+  - if [[ $LARAVEL_VERSION == '5.3' && $TRAVIS_PHP_VERSION == 7.1 ]]; then composer require padosoft/laravel-test:2.*; fi
   - composer require padosoft/laravel-composer-security dev-master
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
