--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ matrix:
     env: LARAVEL_VERSION=5.1
   - php: 5.6
     env: LARAVEL_VERSION=5.2.23
-  - php: 7
+  - php: 7.0
     env: LARAVEL_VERSION=5.0
-  - php: 7
+  - php: 7.0
     env: LARAVEL_VERSION=5.1
-  - php: 7
+  - php: 7.0
     env: LARAVEL_VERSION=5.2.23
-  - php: 7
+  - php: 7.0
     env: LARAVEL_VERSION=5.3
   - php: 7.1
     env: LARAVEL_VERSION=5.1
@@ -35,7 +35,7 @@ matrix:
     env: LARAVEL_VERSION=5.0
   - php: 5.6
     env: LARAVEL_VERSION=5.0
-  - php: 7
+  - php: 7.0
     env: LARAVEL_VERSION=5.0
   - php: 7.1
     env: LARAVEL_VERSION=5.0
@@ -50,7 +50,7 @@ before_install:
   - if [[ $LARAVEL_VERSION != '5.3' ]]; then composer require padosoft/laravel-test:1.*; fi
   - if [[ $LARAVEL_VERSION == '5.3' && $TRAVIS_PHP_VERSION == 7.0 ]]; then composer require padosoft/laravel-test:2.*; fi
   - if [[ $LARAVEL_VERSION == '5.3' && $TRAVIS_PHP_VERSION == 7.1 ]]; then composer require padosoft/laravel-test:2.*; fi
-  - composer require padosoft/laravel-composer-security dev-master
+  - composer require padosoft/laravel-composer-security dev-laravel5.-php71
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
   - ./vendor/padosoft/laravel-composer-security/tests/config/sedCommand.sh
