--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ before_install:
   - if [[ $LARAVEL_VERSION != '5.3' ]]; then composer require padosoft/laravel-test:1.*; fi
   - if [[ $LARAVEL_VERSION == '5.3' && $TRAVIS_PHP_VERSION == 7.0 ]]; then composer require padosoft/laravel-test:2.*; fi
   - if [[ $LARAVEL_VERSION == '5.3' && $TRAVIS_PHP_VERSION == 7.1 ]]; then composer require padosoft/laravel-test:2.*; fi
-  - composer require padosoft/laravel-composer-security dev-laravel5.-php71
+  - composer require padosoft/laravel-composer-security dev-laravel53-php71
   - if [[ $LARAVEL_VERSION == '5.0' ]]; then composer require mockery/mockery; fi
   - chmod 777 -R ./
   - ./vendor/padosoft/laravel-composer-security/tests/config/sedCommand.sh
